--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "direflow-scripts test"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
